Added post and get functions for team members
