# app/Models/TeamMember.php
@@ -3,12 +3,16 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 
 class TeamMember extends Model
 {
-    protected $fillable = [
-        'name',
-        'role'
-    ];
+    use HasFactory;
+
+    protected $fillable = ['name','role','bio','profile_image'];
+
+    public function socialMediaLinks() {
+        return $this->hasMany(SocialMediaLink::class);
+    }
 }
